Fix year spacing on archive page

--- a/_src/assets/css/archive.css
+++ b/_src/assets/css/archive.css
@@ -38,6 +38,10 @@
   align-self: center;
 }
 
+.year-number + .post-list {
+  margin-top: var(--space-xxsmall);
+}
+
 .post-list > * + * {
   margin-top: var(--space-xxlarge);
 }
